Init: 서브모듈 추가 전 수정

--- a/.gitignore
+++ b/.gitignore
@@ -235,5 +235,7 @@ target
 .\.idea
 gradle
 .\gradle
+gradlew.bat
+gradlew
 
 # End of https://www.toptal.com/developers/gitignore/api/java,intellij,gradle,macos,windows
