--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ plugins {
 group = 'com.feelmycode.parabole'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '17'
+projectName = 'parabole'
 
 configurations {
     all {
@@ -22,6 +23,7 @@ configurations {
     compileOnly {
         extendsFrom annotationProcessor
     }
+    jar.archiveName = '${rootProject.name}.jar'
 }
 
 repositories {
