--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ plugins {
 	id 'org.springframework.boot' version '2.7.3'
 	id 'io.spring.dependency-management' version '1.0.13.RELEASE'
 	id 'java'
-//	id 'org.asciidoctor.convert' version '1.5.9.2'
+	id 'org.asciidoctor.convert' version '1.5.9.2'
 //	id 'com.epages.restdocs-api-spec' version '0.11.3'
 }
 
@@ -38,38 +38,39 @@ dependencies {
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.13.3'
     implementation 'org.springframework.boot:spring-boot-starter-log4j2'
 
-//    asciidoctor 'org.springframework.restdocs:spring-restdocs-asciidoctor'
+    asciidoctor 'org.springframework.restdocs:spring-restdocs-asciidoctor'
 
     compileOnly 'org.projectlombok:lombok'
 
     annotationProcessor 'org.projectlombok:lombok'
 
+    testImplementation 'org.springframework.restdocs:spring-restdocs-restassured'
+    testImplementation 'io.rest-assured:rest-assured'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-//    testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
 }
 
-//ext {
-//    set('snippetsDir', file("build/generated-snippets"))
-//}
+ext {
+    set('snippetsDir', file("build/generated-snippets"))
+}
 
-//asciidoctor {
-//    inputs.dir snippetsDir
-//    dependsOn test
-//}
+asciidoctor {
+    inputs.dir snippetsDir
+    dependsOn test
+}
 
 test {
-//    outputs.dir snippetsDir
+    outputs.dir snippetsDir
     useJUnitPlatform()
 }
 
-//bootJar {
-//    dependsOn asciidoctor
-//
-//    copy {
-//        from "build/generated_snippets"
-//        into "src/main/resources/static/docs/"
-//    }
-//}
+bootJar {
+    dependsOn asciidoctor
+
+    copy {
+        from "build/generated_snippets"
+        into "src/main/resources/static/docs/"
+    }
+}
 
 tasks.named('test') {
     useJUnitPlatform()
@@ -80,7 +81,7 @@ tasks.named('test') {
 //    title = 'The Parabole'
 //    description = 'The Parabole API description'
 //    version = '0.1.0'
-//    format = 'yaml'
+//    format = 'yml'
 //    outputDirectory = "."
 //    outputFileNamePrefix = "swagger"
 //    copy {
