--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,8 @@ plugins {
 	id 'org.springframework.boot' version '2.7.3'
 	id 'io.spring.dependency-management' version '1.0.13.RELEASE'
 	id 'java'
-	id 'org.asciidoctor.convert' version '1.5.3'
+//	id 'org.asciidoctor.convert' version '1.5.3'
+	id 'org.asciidoctor.jvm.convert' version "3.3.2"
 }
 
 group = 'com.feelmycode.parabole'
@@ -21,6 +22,7 @@ configurations {
     compileOnly {
         extendsFrom annotationProcessor
     }
+    asciidoctorExtensions
 }
 
 repositories {
@@ -36,7 +38,8 @@ dependencies {
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.13.3'
     implementation 'org.springframework.boot:spring-boot-starter-log4j2'
 
-    asciidoctor 'org.springframework.restdocs:spring-restdocs-asciidoctor'
+//    asciidoctor 'org.springframework.restdocs:spring-restdocs-asciidoctor'
+    asciidoctorExtensions 'org.springframework.restdocs:spring-restdocs-asciidoctor'
 
     compileOnly 'org.projectlombok:lombok'
 
@@ -51,9 +54,15 @@ ext {
     set('snippetsDir', file("build/generated-snippets"))
 }
 
+//asciidoctor {
+//    inputs.dir snippetsDir
+//    dependsOn test
+//}
+
 asciidoctor {
-    inputs.dir snippetsDir
     dependsOn test
+    configurations 'asciidoctorExtensions'
+    inputs.dir snippetsDir
 }
 
 test {
