--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,12 @@ group = 'com.feelmycode.parabole'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '17'
 
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:2021.0.3"
+    }
+}
+
 configurations {
     all {
         exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
@@ -33,11 +39,12 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
     implementation 'mysql:mysql-connector-java'
     implementation 'junit:junit:4.13.1'
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.13.3'
     implementation 'org.springframework.boot:spring-boot-starter-log4j2'
-
+    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
 //    asciidoctor 'org.springframework.restdocs:spring-restdocs-asciidoctor'
     asciidoctorExtensions 'org.springframework.restdocs:spring-restdocs-asciidoctor'
 
@@ -51,6 +58,7 @@ dependencies {
 }
 
 ext {
+    set('springCloudVersion', "2021.0.4")
     set('snippetsDir', file("build/generated-snippets"))
 }
 
