Fix: build.gradle index.html이 이동하도록 수정

--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,6 @@ plugins {
 	id 'org.springframework.boot' version '2.7.3'
 	id 'io.spring.dependency-management' version '1.0.13.RELEASE'
 	id 'java'
-//	id 'org.asciidoctor.convert' version '1.5.3'
 	id 'org.asciidoctor.jvm.convert' version "3.3.2"
 }
 
@@ -16,13 +15,13 @@ version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '17'
 
 configurations {
+    asciidoctorExtensions
     all {
         exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
     }
     compileOnly {
         extendsFrom annotationProcessor
     }
-    asciidoctorExtensions
 }
 
 repositories {
@@ -37,8 +36,8 @@ dependencies {
     implementation 'junit:junit:4.13.1'
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.13.3'
     implementation 'org.springframework.boot:spring-boot-starter-log4j2'
+    implementation 'com.google.code.findbugs:jsr305:3.0.2'
 
-//    asciidoctor 'org.springframework.restdocs:spring-restdocs-asciidoctor'
     asciidoctorExtensions 'org.springframework.restdocs:spring-restdocs-asciidoctor'
 
     compileOnly 'org.projectlombok:lombok'
@@ -51,13 +50,15 @@ dependencies {
 }
 
 ext {
-    set('snippetsDir', file("build/generated-snippets"))
+    snippetsDir = file("./src/main/resources/snippets")
 }
 
-//asciidoctor {
-//    inputs.dir snippetsDir
-//    dependsOn test
-//}
+test {
+    outputs.dir snippetsDir
+    useJUnitPlatform{
+        includeEngines 'junit-vintage'
+    }
+}
 
 asciidoctor {
     dependsOn test
@@ -65,37 +66,23 @@ asciidoctor {
     inputs.dir snippetsDir
 }
 
-test {
-    outputs.dir snippetsDir
-    useJUnitPlatform()
+build {
+    dependsOn asciidoctor
+    copy {
+        from "./build/docs/asciidoc"
+        include '*.html'
+        into "./src/main/resources/static/docs/"
+    }
 }
 
 bootJar {
     dependsOn asciidoctor
-
     copy {
-        from "build/generated_snippets"
-        into "src/main/resources/static/docs/"
+        from "./build/docs/asciidoc"
+        include '*.html'
+        into "./src/main/resources/static/docs/"
     }
 }
-
-tasks.named('test') {
-    useJUnitPlatform()
-}
-
-//openapi3 {
-//    server = 'http://localhost:8080'
-//    title = 'The Parabole'
-//    description = 'The Parabole API description'
-//    version = '0.1.0'
-//    format = 'yml'
-//    outputDirectory = "."
-//    outputFileNamePrefix = "swagger"
-//    copy {
-//        from "build/api-spec"
-//        into "src/main/resources/static/docs"
-//    }
-//}
 
 processResources.dependsOn('ymlSecurity')
 
