--- a/.gitignore
+++ b/.gitignore
@@ -233,5 +233,6 @@ target
 /target/
 .idea
 .\.idea
+src/main/resources/static
 
 # End of https://www.toptal.com/developers/gitignore/api/java,intellij,gradle,macos,windows
