--- a/build.gradle
+++ b/build.gradle
@@ -15,13 +15,13 @@ version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '17'
 
 configurations {
-    asciidoctorExtensions
     all {
         exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
     }
     compileOnly {
         extendsFrom annotationProcessor
     }
+    asciidoctorExtensions
 }
 
 repositories {
@@ -39,11 +39,13 @@ dependencies {
     implementation 'junit:junit:4.13.1'
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.13.3'
     implementation 'org.springframework.boot:spring-boot-starter-log4j2'
-    implementation 'com.google.code.findbugs:jsr305:3.0.2'
 
+//    asciidoctor 'org.springframework.restdocs:spring-restdocs-asciidoctor'
     asciidoctorExtensions 'org.springframework.restdocs:spring-restdocs-asciidoctor'
 
     compileOnly 'org.projectlombok:lombok'
+
+    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2'
 
     annotationProcessor 'org.projectlombok:lombok'
 
@@ -53,15 +55,13 @@ dependencies {
 }
 
 ext {
-    snippetsDir = file("./src/main/resources/snippets")
+    set('snippetsDir', file("build/generated-snippets"))
 }
 
-test {
-    outputs.dir snippetsDir
-    useJUnitPlatform{
-        includeEngines 'junit-vintage'
-    }
-}
+//asciidoctor {
+//    inputs.dir snippetsDir
+//    dependsOn test
+//}
 
 asciidoctor {
     dependsOn test
@@ -69,23 +69,37 @@ asciidoctor {
     inputs.dir snippetsDir
 }
 
-build {
-    dependsOn asciidoctor
-    copy {
-        from "./build/docs/asciidoc"
-        include '*.html'
-        into "./src/main/resources/static/docs/"
-    }
+test {
+    outputs.dir snippetsDir
+    useJUnitPlatform()
 }
 
 bootJar {
     dependsOn asciidoctor
+
     copy {
-        from "./build/docs/asciidoc"
-        include '*.html'
-        into "./src/main/resources/static/docs/"
+        from "build/generated_snippets"
+        into "src/main/resources/static/docs/"
     }
 }
+
+tasks.named('test') {
+    useJUnitPlatform()
+}
+
+//openapi3 {
+//    server = 'http://localhost:8080'
+//    title = 'The Parabole'
+//    description = 'The Parabole API description'
+//    version = '0.1.0'
+//    format = 'yml'
+//    outputDirectory = "."
+//    outputFileNamePrefix = "swagger"
+//    copy {
+//        from "build/api-spec"
+//        into "src/main/resources/static/docs"
+//    }
+//}
 
 processResources.dependsOn('ymlSecurity')
 
