--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,4 +19,4 @@ eureka:
     register-with-eureka: true
     fetch-registry: true
     service-url:
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: http://3.39.25.221:8761/eureka
