--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,9 +8,9 @@ logging:
 
 spring:
   profiles:
-    active: dev
+    active: prod
   application:
-    name: parabole
+    name: market-parabole
 
 cloud:
   aws:
